// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshots ExportButton default 1`] = `
<span>
  <button
    aria-label={null}
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "background": "none",
        "backgroundColor": "unset",
        "border": "none",
        "borderRadius": "unset",
        "color": "unset",
        "cursor": "pointer",
        "display": "unset",
        "fontFamily": "unset",
        "fontSize": "unset",
        "fontWeight": "unset",
        "lineHeight": "unset",
        "margin": "unset",
        "outline": "none",
        "padding": 0,
        "transition": "unset",
      }
    }
  >
    <span
      style={
        Object {
          "color": "#59626a",
          "fontFamily": "\\"Roboto\\", sans-serif",
          "fontSize": "0.75rem",
          "fontWeight": 400,
        }
      }
    >
      Export as Images
    </span>
  </button>
</span>
`;

exports[`Snapshots ExportButton exporting 1`] = `
<span>
  <button
    aria-label={null}
    disabled={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "background": "none",
        "backgroundColor": "unset",
        "border": "none",
        "borderRadius": "unset",
        "color": "unset",
        "cursor": "pointer",
        "display": "unset",
        "fontFamily": "unset",
        "fontSize": "unset",
        "fontWeight": "unset",
        "lineHeight": "unset",
        "margin": "unset",
        "outline": "none",
        "padding": 0,
        "transition": "unset",
      }
    }
  >
    <span
      style={
        Object {
          "color": "#59626a",
          "fontFamily": "\\"Roboto\\", sans-serif",
          "fontSize": "0.75rem",
          "fontWeight": 400,
        }
      }
    >
      Exporting...
    </span>
  </button>
</span>
`;

exports[`Snapshots ExportButton onClick works when not exporting 1`] = `
<span>
  <div>
    <div>
      <button
        aria-label={null}
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "background": "none",
            "backgroundColor": "unset",
            "border": "none",
            "borderRadius": "unset",
            "color": "unset",
            "cursor": "pointer",
            "display": "unset",
            "fontFamily": "unset",
            "fontSize": "unset",
            "fontWeight": "unset",
            "lineHeight": "unset",
            "margin": "unset",
            "outline": "none",
            "padding": 0,
            "transition": "unset",
          }
        }
      >
        <span
          style={
            Object {
              "color": "#59626a",
              "fontFamily": "\\"Roboto\\", sans-serif",
              "fontSize": "0.75rem",
              "fontWeight": 400,
            }
          }
        >
          Export as Images
        </span>
      </button>
    </div>
    <div>
      <button
        aria-label={null}
        disabled={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "background": "none",
            "backgroundColor": "unset",
            "border": "none",
            "borderRadius": "unset",
            "color": "unset",
            "cursor": "pointer",
            "display": "unset",
            "fontFamily": "unset",
            "fontSize": "unset",
            "fontWeight": "unset",
            "lineHeight": "unset",
            "margin": "unset",
            "outline": "none",
            "padding": 0,
            "transition": "unset",
          }
        }
      >
        <span
          style={
            Object {
              "color": "#59626a",
              "fontFamily": "\\"Roboto\\", sans-serif",
              "fontSize": "0.75rem",
              "fontWeight": 400,
            }
          }
        >
          Exporting...
        </span>
      </button>
    </div>
  </div>
</span>
`;
